@@ -4,6 +4,7 @@ from django.urls import reverse
 from django.utils.translation import gettext_lazy as _
 
 from paperclip import settings
+from paperclip.utils import is_an_image, mimetype
 
 MODE_CHOICED = [('File', _('File')), ]
 
@@ -86,6 +87,9 @@ class AttachmentForm(forms.ModelForm):
 
     def clean_attachment_file(self):
         uploaded_image = self.cleaned_data.get("attachment_file", False)
+        is_image = is_an_image(mimetype(uploaded_image))
+        if not is_image:
+            return uploaded_image
         if not self.is_creation:
             try:
                 uploaded_image.file.readline()
@@ -95,9 +99,9 @@ class AttachmentForm(forms.ModelForm):
             raise forms.ValidationError(_('The uploaded file is too large'))
 
         width, height = get_image_dimensions(uploaded_image)
-        if settings.PAPERCLIP_MIN_ATTACHMENT_WIDTH and width and settings.PAPERCLIP_MIN_ATTACHMENT_WIDTH > width:
+        if settings.PAPERCLIP_MIN_IMAGE_UPLOAD_WIDTH and settings.PAPERCLIP_MIN_IMAGE_UPLOAD_WIDTH > width:
             raise forms.ValidationError(_('The uploaded file is not wide enough'))
-        if settings.PAPERCLIP_MIN_ATTACHMENT_HEIGHT and height and settings.PAPERCLIP_MIN_ATTACHMENT_HEIGHT > height:
+        if settings.PAPERCLIP_MIN_IMAGE_UPLOAD_HEIGHT and settings.PAPERCLIP_MIN_IMAGE_UPLOAD_HEIGHT > height:
             raise forms.ValidationError(_('The uploaded file is not tall enough'))
         return uploaded_image
 
