@@ -5,8 +5,9 @@ CHANGELOG
 2.6.0+dev  (XXXX-XX-XX)
 =======================
 
-* Fix attachments file have no dimension
-
+* Change setting names : `PAPERCLIP_MIN_ATTACHMENT_HEIGHT`, `PAPERCLIP_MIN_ATTACHMENT_WIDTH`
+`PAPERCLIP_MIN_IMAGE_UPLOAD_WIDTH`, `PAPERCLIP_MIN_IMAGE_UPLOAD_HEIGHT`
+* Fix check size of image only when it's an image
 
 2.6.0      (2022-07-06)
 =======================
